--- a/2. Classification Models - Heart Disease Prediction/Heart Disease Prediction.ipynb
+++ b/2. Classification Models - Heart Disease Prediction/Heart Disease Prediction.ipynb
@@ -1597,7 +1597,7 @@
    "source": [
     "knn = KNeighborsClassifier(n_neighbors=2)\n",
     "\n",
-    "knn.fit(x_train,y_train)\n",
+    "knn.fit(x_train, y_train)\n",
     "\n",
     "y_pred = knn.predict(x_test)"
    ]
@@ -1821,7 +1821,7 @@
     }
    ],
    "source": [
-    "model = RandomForestClassifier(n_estimators=60, n_jobs=-1, random_state=42)\n",
+    "model = RandomForestClassifier(n_estimators=80, n_jobs=-1, random_state=42)\n",
     "\n",
     "model.fit(x_train,y_train)"
    ]
@@ -2265,7 +2265,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2279,7 +2279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
