--- a/2. Classification Models - Parkinson's Disease Prediction with Random Forest/Parkinson's Disease Prediction with Random Forest.ipynb
+++ b/2. Classification Models - Parkinson's Disease Prediction with Random Forest/Parkinson's Disease Prediction with Random Forest.ipynb
@@ -3725,7 +3725,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3739,7 +3739,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   },
   "papermill": {
    "default_parameters": {},
