--- a/Parkinson's Disease Symptoms Analysis and Prediction/4. Feature Engineeering.ipynb
+++ b/Parkinson's Disease Symptoms Analysis and Prediction/4. Feature Engineeering.ipynb
@@ -2300,7 +2300,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#plot_distribution_numerical(df_transformed)"
+    "plot_distribution_numerical(df_transformed)"
    ]
   },
   {
@@ -2318,7 +2318,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_transformed.to_csv('df_transformed.csv', index=False)"
+    "df_transformed.to_csv('feature_transformed_data.csv', index=False)"
    ]
   },
   {
